--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-<title>MKi</title>
+    <title>MKi</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
 </head>
 
 <body>
