--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 
 <head>
     <title>MKi</title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Vojtěch Kubrycht"/>
     <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+    <ul class="navbar">
+        <li class="navbar"><a class="navbar" href="index.html"><img src="favicon.png" alt="Home" style="width:14px;height:14px;"></a></li>
+        <li class="navbar"><a class="navbar" href="zadani/zadani.html">Zadání</a></li>
+        <li class="navbar"><a class="navbar" href="poradi/poradi.html">Pořadí</a></li>
+        <li class="navbar"><a class="navbar" href="onas/onas.html">O MKi</a></li>
+    </ul>
+
     <h1>Měsíční kvantum informací</h1>
+    <h2>TODO Homepage</h2>
     <p>Hello world</p>
 </body>
 
