--- a/jakresit/pravidla.html
+++ b/jakresit/pravidla.html
@@ -26,7 +26,7 @@
         <a href="https://instagram.com/mki_physics" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
     </div>
 
-    <h1>TODO Zadání</h1>
+    <h1>TODO Pravidla</h1>
     <p>Hello world</p>
 </body>
 
