--- a/onas/onas.html
+++ b/onas/onas.html
@@ -5,17 +5,26 @@
     <title>MKi</title>
     <meta charset="UTF-8">
     <meta name="author" content="Vojtěch Kubrycht"/>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/83232f501b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <ul class="navbar">
-        <li class="navbar"><a class="navbar" href="../index.html"><img src="../favicon.png" alt="Home" style="width:14px;height:14px;"></a></li>
-        <li class="navbar"><a class="navbar" href="../zadani/zadani.html">Zadání</a></li>
-        <li class="navbar"><a class="navbar" href="../poradi/poradi.html">Pořadí</a></li>
-        <li class="navbar"><a class="navbar" href="../onas/onas.html">O MKi</a></li>
-    </ul>
+    <div class="navbar">
+        <a href="../index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="../zadani/zadani.html"><i class="fa-solid fa-pen-to-square"></i>  Zadání</a>
+        <a href="../poradi/poradi.html"><i class="fa-solid fa-trophy"></i>  Pořadí</a>
+        <div class="dropdown">
+            <button class="dropdown-button"><i class="fa fa-book"></i> Jak řešit? <i class="fa-solid fa-caret-down"></i></button>
+            <div class="dropdown-menu">
+                <a href="../jakresit/pravidla.html">Pravidla</a>
+                <a href="../jakresit/reseni.html">Jak psát řešení</a>
+            </div>
+        </div>
+        <a href="../onas/onas.html"><i class="fa-solid fa-users"></i> O MKi</a>
+        <a href="https://instagram.com/mki_physics" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+    </div>
 
     <h1>TODO O MKi</h1>
     <p>Hello world</p>
