--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://kit.fontawesome.com/83232f501b.js" crossorigin="anonymous"></script>
+    <script type="module" src='https://unpkg.com/html-include-element'></script>
 </head>
 
 <body>
@@ -29,6 +30,7 @@
     <h1>Měsíční kvantum informací</h1>
     <h2>TODO Homepage</h2>
     <p>Hello world</p>
+    <html-include src="./my-local-file.html"></html-include>
 </body>
 
 </html>
