[index] fix links

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <body>
     <div class="navbar">
-        <a href="/index.html"><i class="fa-solid fa-house"></i></a>
-        <a href="/zadani/zadani.html"><i class="fa-solid fa-pen-to-square"></i>  Zadání</a>
-        <a href="/poradi/poradi.html"><i class="fa-solid fa-trophy"></i>  Pořadí</a>
+        <a href="index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="zadani/zadani.html"><i class="fa-solid fa-pen-to-square"></i>  Zadání</a>
+        <a href="poradi/poradi.html"><i class="fa-solid fa-trophy"></i>  Pořadí</a>
         <div class="dropdown">
             <button class="dropdown-button"><i class="fa fa-book"></i> Jak řešit? <i class="fa-solid fa-caret-down"></i></button>
             <div class="dropdown-menu">
-                <a href="/jakresit/pravidla.html">Pravidla</a>
-                <a href="./jakresit/reseni.html">Jak psát řešení</a>
+                <a href="jakresit/pravidla.html">Pravidla</a>
+                <a href="jakresit/reseni.html">Jak psát řešení</a>
             </div>
         </div>
-        <a href="/onas/onas.html"><i class="fa-solid fa-users"></i> O MKi</a>
+        <a href="onas/onas.html"><i class="fa-solid fa-users"></i> O MKi</a>
         <a href="https://instagram.com/mki_physics" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
     </div>
     <h1>Měsíční kvantum informací</h1>
