[.html] updated navbar, head, [css] updated navbar dropdown, + homepage styling, image tiles setup, [index] + homepage info, image tiles setup, [onas] + historie, kontakt

--- a/onas/historie.html
+++ b/onas/historie.html
@@ -47,18 +47,8 @@
         <a href="https://instagram.com/mki_physics" target="_blank"><span class="fa-brands fa-instagram"></span> Instagram</a>
     </div>
 
-    <div class="home-info">
-        <h1>Měsíční kvantum informací</h1>
-        <p>
-            Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na <a href="https://gybu.cz" target="_blank">Gymnáziu Budějovická</a>,
-            který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky
-        </p>
-    </div>
-    <div class="image-tiles">
-        <div class="image-tile">
-
-        </div>
-    </div>
+    <h1>TODO Historie MKi</h1>
+    <p>Hello world</p>
 </body>
 
 </html>
