--- a/data-import/ulohy.html
+++ b/data-import/ulohy.html
@@ -2,12 +2,15 @@
 <html>
 
 <head>
+    <!--Metadata-->
     <title>MKi</title>
     <meta charset="UTF-8">
     <meta name="author" content="Vojtěch Kubrycht"/>
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link rel="preload stylesheet"type="text/css" href="../css/style.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <!--Font Awesome for icons-->
     <script rel="preload font" src="https://kit.fontawesome.com/83232f501b.js" crossorigin="anonymous" onload="this.rel='stylesheet'"></script>
+    <!--Stylesheet-->
+    <link rel="preload stylesheet"type="text/css" href="/css/style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
