--- a/jakresit/reseni.html
+++ b/jakresit/reseni.html
@@ -2,29 +2,49 @@
 <html>
 
 <head>
-    <title>MKi - Jak psát řešení</title>
+    <!--Metadata-->
+    <title>MKi</title>
     <meta charset="UTF-8">
     <meta name="author" content="Vojtěch Kubrycht"/>
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <!--Font Awesome for icons-->
     <script rel="preload font" src="https://kit.fontawesome.com/83232f501b.js" crossorigin="anonymous" onload="this.rel='stylesheet'"></script>
-    <link rel="preload stylesheet"type="text/css" href="../css/style.css" as="style" onload="this.rel='stylesheet'">
-    <script rel="preload" type="module" src='https://unpkg.com/html-include-element'></script>
+    <!--Stylesheet-->
+    <link rel="preload stylesheet"type="text/css" href="/css/style.css" as="style" onload="this.rel='stylesheet'">
+    <!--Script for including other htmls-->
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script>
+    $(function () {
+        var includes = $('[data-include]')
+        $.each(includes, function () {
+          var file = $(this).data('include')
+          $(this).load(file)
+        })
+      })
+    </script>
 </head>
 
 <body>
     <div class="navbar">
-        <a href="../index.html"><i class="fa-solid fa-house"></i></a>
-        <a href="../zadani/zadani.html"><i class="fa-solid fa-pen-to-square"></i>  Zadání</a>
-        <a href="../poradi/poradi.html"><i class="fa-solid fa-trophy"></i>  Pořadí</a>
+        <a href="/index.html"><span class="fa-solid fa-house"></span></a>
+        <a href="/zadani/zadani.html"><span class="fa-solid fa-pen-to-square"></span>  Zadání</a>
+        <a href="/poradi/poradi.html"><span class="fa-solid fa-trophy"></span>  Pořadí</a>
         <div class="dropdown">
-            <button class="dropdown-button"><i class="fa fa-book"></i> Jak řešit? <i class="fa-solid fa-caret-down"></i></button>
-            <div class="dropdown-menu">
-                <a href="../jakresit/pravidla.html">Pravidla</a>
-                <a href="../jakresit/reseni.html">Jak psát řešení</a>
+            <button class="dropdown-button"><span class="fa fa-book"></span> Jak řešit? <span class="fa-solid fa-caret-down"></span></button>
+            <div class="dropdown-menu" id="jakresit-dropdown">
+                <a href="/jakresit/pravidla.html">Pravidla</a>
+                <a href="/jakresit/reseni.html">Jak psát řešení</a>
             </div>
         </div>
-        <a href="../onas/onas.html"><i class="fa-solid fa-users"></i> O MKi</a>
-        <a href="https://instagram.com/mki_physics" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <div class="dropdown">
+            <button class="dropdown-button"><span class="fa-solid fa-users"></span> O MKi <span class="fa-solid fa-caret-down"></span></button>
+            <div class="dropdown-menu" id="onas-dropdown">
+                <a href="/onas/onas.html">Co je MKi?</a>
+                <a href="/onas/historie.html">Historie</a>
+                <a href="/onas/kontakt.html">Kontakt</a>
+            </div>
+        </div>
+        <a href="https://instagram.com/mki_physics" target="_blank"><span class="fa-brands fa-instagram"></span> Instagram</a>
     </div>
 
     <h1>TODO Jak psát řešení</h1>
