--- a/data-import/ulohy.html
+++ b/data-import/ulohy.html
@@ -6,38 +6,38 @@
     <title>MKi</title>
     <meta charset="UTF-8">
     <meta name="author" content="Vojtěch Kubrycht"/>
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <!--Font Awesome for icons-->
     <script rel="preload font" src="https://kit.fontawesome.com/83232f501b.js" crossorigin="anonymous" onload="this.rel='stylesheet'"></script>
     <!--Stylesheet-->
-    <link rel="preload stylesheet"type="text/css" href="/css/style.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload stylesheet"type="text/css" href="../css/style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
     <p><span class="fa-regular fa-calendar"></span> Termín: 31. 9. 2023</p>
     <div class="task">
-        <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-image"></span> U1 První úloha (poznávačka)</h2>
+        <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-image"></span> U1 První úloha (Poznávačka)<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-square-check"></span> U2 Druhá úloha (kroužkovací)</h2>
+        <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-square-check"></span> U2 Druhá úloha (Kroužkovací)<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline"><span class="fa-regular fa-circle-question"></span> U3 Třetí úloha (random)</h2>
+        <h2 class="task-headline"><span class="fa-regular fa-circle-question"></span> U3 Třetí úloha (Random)<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Čtvrtá úloha (problémovka)</h2>
+        <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Čtvrtá úloha (Problémovka)<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline"><span class="fa-regular fa-lightbulb"></span> U5 Pátá úloha (Hard)</h2>
+        <h2 class="task-headline"><span class="fa-regular fa-lightbulb"></span> U5 Pátá úloha (Hard)<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline task-headline-astronomy"><span class="fa-solid fa-user-astronaut"></span> Astronomická úloha</h2>
+        <h2 class="task-headline task-headline-astronomy"><span class="fa-solid fa-user-astronaut"></span> Astronomická úloha<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline task-headline-quantum"><span class="fa-brands fa-react"></span> Kvantová úloha</h2>
+        <h2 class="task-headline task-headline-quantum"><span class="fa-brands fa-react"></span> Kvantová úloha<small class="task-points">(? body)</small></h2>
     </div>
     <div class="task">
-        <h2 class="task-headline task-headline-bonus"><span class="fa-regular fa-star"></span> Bonusová úloha</h2>
+        <h2 class="task-headline task-headline-bonus"><span class="fa-regular fa-star"></span> Bonusová úloha<small class="task-points">(? body)</small></h2>
     </div>
 </body>
 
