[images] + resized images, [css] + navbar z-index, body styling, homepage tile style, [index] + homepage tiles, TODO bottom text

--- a/index.html
+++ b/index.html
@@ -54,11 +54,48 @@
             který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky
         </p>
     </div>
-    <div class="image-tiles">
-        <div class="image-tile">
 
+<div class="tiles">
+    <div class="row">
+        <div class="tile">
+            <a href="zadani/zadani.html">
+                <div class="tile-block batch">
+                    <div class="title">
+                        6 sérií ročně
+                    </div>
+                    <div class="description">
+                        Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na GyBu, který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="tile">
+            <a href="zadani/zadani.html">
+                <div class="tile-block task">
+                    <div class="title">
+                        8 příkladů v sérii
+                    </div>
+                    <div class="description">
+                        Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na GyBu, který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky matematiky matematiky matematiky matematiky matematiky v matematiky
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="tile">
+            <a href="onas/historie.html">
+                <div class="tile-block prize">
+                    <div class="title">
+                        Vyhlášení na konci roku
+                    </div>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Etiam egestas wisi a erat. erat. erat. erat. erat. erat. erat. erat.
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
+</div>
+
 </body>
 
 </html>
