[index] updated homepage info, added tile descriptions, [css] + task, task-text, tag, home-info and tiles styling, [ulohy] + tag, task text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <!-- Top navbar -->
     <div class="navbar">
         <a href="index.html"><span class="fa-solid fa-house"></span></a>
         <a href="zadani/zadani.html"><span class="fa-solid fa-pen-to-square"></span>  Zadání</a>
@@ -47,54 +48,56 @@
         <a href="https://instagram.com/mki_physics" target="_blank"><span class="fa-brands fa-instagram"></span> Instagram</a>
     </div>
 
+    <!-- Homepage MKi info -->
     <div class="home-info">
-        <h1>Měsíční kvantum informací</h1>
+        <h1>Měsíční Kvantum informací</h1>
         <p>
             Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na <a href="https://gybu.cz" target="_blank">Gymnáziu Budějovická</a>,
-            který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky
+            který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque pretium lectus id turpis. Fusce aliquam vestibulum ipsum. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam.
         </p>
     </div>
 
-<div class="tiles">
-    <div class="row">
-        <div class="tile">
-            <a href="zadani/zadani.html">
-                <div class="tile-block batch">
-                    <div class="title">
-                        6 sérií ročně
+    <!-- Image tiles w/ description -->
+    <div class="tiles">
+        <div class="row">
+            <div class="tile">
+                <a href="zadani/zadani.html">
+                    <div class="tile-block batch">
+                        <div class="title">
+                            6 sérií ročně
+                        </div>
+                        <div class="description">
+                            Startujeme se začátkem školního roku, končíme před prázdninami. Vždy běží jedna série po dobu dvou kalendářních měsíců. Jakmile skončí, opravíme vaše řešení a pošleme vám jej zpět obodované. Dostáváte takto zpětnou vazbu již v průběhu soutěže.
+                        </div>
                     </div>
-                    <div class="description">
-                        Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na GyBu, který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky
+                </a>
+            </div>
+            <div class="tile">
+                <a href="zadani/zadani.html">
+                    <div class="tile-block task">
+                        <div class="title">
+                            8 příkladů v sérii
+                        </div>
+                        <div class="description">
+                            Dvě jednoduché úlohy (poznávací a kroužkovací), tři pokročilé, nad kterými se musíte více zamyslet, dvě seriálové úlohy s doprovodným textem zabývajícím se kvantovou fyzikou a astronomií a jedna početní úloha jako bonus na závěr.
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div class="tile">
-            <a href="zadani/zadani.html">
-                <div class="tile-block task">
-                    <div class="title">
-                        8 příkladů v sérii
+                </a>
+            </div>
+            <div class="tile">
+                <a href="onas/historie.html">
+                    <div class="tile-block prize">
+                        <div class="title">
+                            Vyhlášení na konci roku
+                        </div>
+                        <div class="description">
+                            V červnu proběhne slavnostní vyhlášení, nejlepší řešitelé každé kategorie obdrží odměnu (typicky naučné knihy, deskové hry a další ...) a pro každého řešitele bude přichystána ročenka, ve které je shrnutý celý průběh ročníku MKi.
+                        </div>
                     </div>
-                    <div class="description">
-                        Měsíční kvantum informací (zkráceně MKi) je fyzikální korespondenční seminář probíhající na GyBu, který má za účel prezentovat fyziku s minimálním množstvím potřebné matematiky matematiky matematiky matematiky matematiky matematiky v matematiky
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="tile">
-            <a href="onas/historie.html">
-                <div class="tile-block prize">
-                    <div class="title">
-                        Vyhlášení na konci roku
-                    </div>
-                    <div class="description">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Etiam egestas wisi a erat. erat. erat. erat. erat. erat. erat. erat.
-                    </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
-</div>
 
 </body>
 
