--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!--!!Temporary MathJax-->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script src="../js/mathjax-config.js" defer></script>
+    <script src="js/mathjax-config.js" defer></script>
     <script id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js"></script>
 </head>
 
@@ -112,7 +112,7 @@
             <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Obrovské kvantum<small class="task-points">(? body)</small></h2>
             <div>
                 <p class="task-text">
-                    Co byste očekávali, že by se stalo, kdyby namísto přibližné hodnoty $6,626 \cdot 10^{-34}\,\mathrm{J\cdot s}$ měla Planckova konstanta hodnotu $6,626 \cdot 10^{34}\,\mathrm{J\cdot s}$?
+                    Co byste očekávali, že by se stalo, kdyby namísto přibližné hodnoty $6{,}626 \cdot 10^{-34}\,\mathrm{J{\cdot}s}$ měla Planckova konstanta hodnotu $6{,}626 \cdot 10^{34}\,\mathrm{J{\cdot}s}$?
                 </p>
             </div>
             <p class="tag"><span class="fa-solid fa-tag"></span> kvantová fyzika</p>
