--- a/zadani/zadani.html
+++ b/zadani/zadani.html
@@ -22,33 +22,152 @@
         })
       })
     </script>
+
+    <!--!!Temporary MathJax-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="../js/mathjax-config.js" defer></script>
+    <script id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body>
-    <div class="navbar">
-        <a href="../index.html"><span class="fa-solid fa-house"></span></a>
-        <a href="../zadani/zadani.html"><span class="fa-solid fa-pen-to-square"></span>  Zadání</a>
-        <a href="../poradi/poradi.html"><span class="fa-solid fa-trophy"></span>  Pořadí</a>
-        <div class="dropdown">
-            <button class="dropdown-button"><span class="fa fa-book"></span> Jak řešit? <span class="fa-solid fa-caret-down"></span></button>
-            <div class="dropdown-menu" id="jakresit-dropdown">
-                <a href="../jakresit/pravidla.html">Pravidla</a>
-                <a href="../jakresit/reseni.html">Jak psát řešení</a>
+    <h1 class="headline">Zadání 1. série</h1>
+    <p class="deadline"><span class="fa-regular fa-calendar"></span> Termín odevzdání: 31. 10. 2023</p>
+    <div class="tasks">
+        <div class="task">
+            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-image"></span> U1 Motorová<small class="task-points">(3 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Ke každému typu motoru z následujícího rámečku přiřaďte rok jeho vynálezu a příslušný obrázek.
+                </p>
+                <div class="task-frame">
+                    <p class="task-frame-title">Motory</p>
+                    <p class="task-frame-content">
+                        piezoelektrický motor, parní motor, raketový motor, elektromotor, proudový motor, Dieselův motor
+                    </p>
+                </div>
+                <div class="task-frame">
+                    <p class="task-frame-title">Roky</p>
+                    <p class="task-frame-content">
+                        1965, 1834, 1939, 1712, 1926, 1897
+                    </p>
+                </div>
+                <div class="task-image-grid">
+                    <div class="task-image-row">
+                        <img src="../images/1-U1/proudový_motor.jpg">
+                        <img src="../images/1-U1/parní_motor.jpg">
+                        <img src="../images/1-U1/elektromotor.jpg">
+                        <img src="../images/1-U1/diesel.jpg">
+                        <img src="../images/1-U1/raketový_motor.jpg">
+                        <img src="../images/1-U1/piezoelectric.jpg">
+                    </div>
+                </div>
             </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> populární fyzika</p>
         </div>
-        <div class="dropdown">
-            <button class="dropdown-button"><span class="fa-solid fa-users"></span> O MKi <span class="fa-solid fa-caret-down"></span></button>
-            <div class="dropdown-menu" id="onas-dropdown">
-                <a href="../onas/onas.html">Co je MKi?</a>
-                <a href="../onas/historie.html">Historie</a>
-                <a href="../onas/kontakt.html">Kontakt</a>
+        <div class="task">
+            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-square-check"></span> U2 Svítí Měsíc?<small class="task-points">(2 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Svítí Měsíc?
+                </p>
+                <p class="answer">
+                    a) Ano, vyzařuje vlastní paprsky.
+                </p>
+                <p class="answer">
+                    b) Ano, odráží paprsky od Slunce.
+                </p>
+                <p class="answer">
+                    c) Ano, odráží paprsky od Země.
+                </p>
+                <p class="answer">
+                    d) Ano, všechny výše uvedené možnosti jsou správné.
+                </p>
+                <p class="answer">
+                    e) Ne, žádná z výše uvedených možností není správná.
+                </p>
             </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> astronomie</p>
         </div>
-        <a href="https://instagram.com/mki_physics" target="_blank"><span class="fa-brands fa-instagram"></span> Instagram</a>
+        <div class="task">
+            <h2 class="task-headline"><span class="fa-regular fa-circle-question"></span> U3 Všechno se mění...<small class="task-points">(2 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Které z následujících konstant nejsou ve skutečnosti konstantní v čase?
+                </p>
+                <p class="answer">
+                    a) Planckova Konstanta
+                </p>
+                <p class="answer">
+                    b) Solární konstanta
+                </p>
+                <p class="answer">
+                    c) Hubbleova konstanta
+                </p>
+                <p class="answer">
+                    d) Konstanta jemné struktury
+                </p>
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> populární fyzika</p>
+        </div>
+        <div class="task">
+            <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Obrovské kvantum<small class="task-points">(3 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Co byste očekávali, že by se stalo, kdyby namísto přibližné hodnoty $6{,}626 \cdot 10^{-34}\,\mathrm{J{\cdot}s}$ měla Planckova konstanta hodnotu $6{,}626 \cdot 10^{34}\,\mathrm{J{\cdot}s}$?
+                </p>
+                <p class="answer">
+                    a) Zvětšila by se velikost atomu.
+                </p>
+                <p class="answer">
+                    b) Klasická mechanika by začala popisovat svět za vyšších energií a hybností.
+                </p>
+                <p class="answer">
+                    c) Klasický popis světa by fungoval pro ještě menší vzdálenosti a časy.
+                </p>
+                <p class="answer">
+                    d) Částicím by se výrazně snížila pravděpodobnost na přelet po trajektoriích, které se odchylují od jejich dráhy předpovězené klasickou mechanikou.
+                </p>
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> kvantová fyzika</p>
+        </div>
+        <div class="task">
+            <h2 class="task-headline"><span class="fa-regular fa-lightbulb"></span> U5 Přitahuje ho jako magnet!<small class="task-points">(5 bodů)</small></h2>
+            <div>
+                <p class="task-text">
+                    Jak bude vypadat trajektorie elektronu pohybujícího se kolem vodiče tak, jak ukazuje obrázek?
+                </p>
+                <img class="temp-img-class" src="../images/1-U5.png">
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> elektromagnetismus</p>
+        </div>
+        <div class="task">
+            <h2 class="task-headline task-headline-astronomy"><span class="fa-solid fa-user-astronaut"></span> Artemis<small class="task-points">(2 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Napište, jaký je váš názor na tématiku prozkoumávání vesmíru, i když jsme ještě neprozkoumali oceány na Zemi.
+                </p>
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> astronomie</p>
+        </div>
+        <div class="task">
+            <h2 class="task-headline task-headline-quantum"><span class="fa-brands fa-react"></span> Oppenheimer<small class="task-points">(2 body)</small></h2>
+            <div>
+                <p class="task-text">
+                    Proč je možné bez výrazné ztráty výpočetní přesnosti předpokládat, že se jádra v molekulách v porovnání s elektrony vůbec nehýbou?
+                </p>
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> kvantová fyzika</p>
+        </div>
+        <div class="task">
+            <h2 class="task-headline task-headline-bonus"><span class="fa-regular fa-star"></span> Bonusová úloha<small class="task-points">(5 bodů)</small></h2>
+            <div>
+                <p class="task-text">
+                    Vypočítejte, jaký výkon bychom museli čerpat z přílivových elektráren, aby se Měsíc přestal oddalovat od Země. Počítejte, že se Měsíc od Země oddaluje rychlostí $4\,\mathrm{cm}$ za rok.
+                </p>
+            </div>
+            <p class="tag"><span class="fa-solid fa-tag"></span> astronomie</p>
+        </div>
     </div>
-
-    <h1>TODO Zadání</h1>
-    <div data-include="../data-import/ulohy.html"></div>
 </body>
 
 </html>
