[index] copied modifiend code from zadani.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 </head>
 
 <body>
-    <p><span class="fa-regular fa-calendar"></span> Termín: 31. 9. 2023</p>
+    <h1 class="headline">Zadání 1. série</h1>
+    <p class="deadline"><span class="fa-regular fa-calendar"></span> Termín odevzdání: 31. 10. 2023</p>
     <div class="tasks">
         <div class="task">
-            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-image"></span> U1 Motorová<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-image"></span> U1 Motorová<small class="task-points">(3 body)</small></h2>
             <div>
                 <p class="task-text">
                     Ke každému typu motoru z následujícího rámečku přiřaďte rok jeho vynálezu a příslušný obrázek.
@@ -64,7 +65,7 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> populární fyzika</p>
         </div>
         <div class="task">
-            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-square-check"></span> U2 Svítí Měsíc?<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline task-headline-easy"><span class="fa-regular fa-square-check"></span> U2 Svítí Měsíc?<small class="task-points">(2 body)</small></h2>
             <div>
                 <p class="task-text">
                     Svítí Měsíc?
@@ -88,7 +89,7 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> astronomie</p>
         </div>
         <div class="task">
-            <h2 class="task-headline"><span class="fa-regular fa-circle-question"></span> U3 Všechno se mění...<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline"><span class="fa-regular fa-circle-question"></span> U3 Všechno se mění...<small class="task-points">(2 body)</small></h2>
             <div>
                 <p class="task-text">
                     Které z následujících konstant nejsou ve skutečnosti konstantní v čase?
@@ -109,16 +110,28 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> populární fyzika</p>
         </div>
         <div class="task">
-            <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Obrovské kvantum<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline"><span class="fa-solid fa-magnifying-glass"></span> U4 Obrovské kvantum<small class="task-points">(3 body)</small></h2>
             <div>
                 <p class="task-text">
                     Co byste očekávali, že by se stalo, kdyby namísto přibližné hodnoty $6{,}626 \cdot 10^{-34}\,\mathrm{J{\cdot}s}$ měla Planckova konstanta hodnotu $6{,}626 \cdot 10^{34}\,\mathrm{J{\cdot}s}$?
+                </p>
+                <p class="answer">
+                    a) Zvětšila by se velikost atomu.
+                </p>
+                <p class="answer">
+                    b) Klasická mechanika by začala popisovat svět za vyšších energií a hybností.
+                </p>
+                <p class="answer">
+                    c) Klasický popis světa by fungoval pro ještě menší vzdálenosti a časy.
+                </p>
+                <p class="answer">
+                    d) Částicím by se výrazně snížila pravděpodobnost na přelet po trajektoriích, které se odchylují od jejich dráhy předpovězené klasickou mechanikou.
                 </p>
             </div>
             <p class="tag"><span class="fa-solid fa-tag"></span> kvantová fyzika</p>
         </div>
         <div class="task">
-            <h2 class="task-headline"><span class="fa-regular fa-lightbulb"></span> U5 Přitahuje ho jako magnet!<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline"><span class="fa-regular fa-lightbulb"></span> U5 Přitahuje ho jako magnet!<small class="task-points">(5 bodů)</small></h2>
             <div>
                 <p class="task-text">
                     Jak bude vypadat trajektorie elektronu pohybujícího se kolem vodiče tak, jak ukazuje obrázek?
@@ -128,7 +141,7 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> elektromagnetismus</p>
         </div>
         <div class="task">
-            <h2 class="task-headline task-headline-astronomy"><span class="fa-solid fa-user-astronaut"></span> Artemis<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline task-headline-astronomy"><span class="fa-solid fa-user-astronaut"></span> Artemis<small class="task-points">(2 body)</small></h2>
             <div>
                 <p class="task-text">
                     Napište, jaký je váš názor na tématiku prozkoumávání vesmíru, i když jsme ještě neprozkoumali oceány na Zemi.
@@ -137,7 +150,7 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> astronomie</p>
         </div>
         <div class="task">
-            <h2 class="task-headline task-headline-quantum"><span class="fa-brands fa-react"></span> Oppenheimer<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline task-headline-quantum"><span class="fa-brands fa-react"></span> Oppenheimer<small class="task-points">(2 body)</small></h2>
             <div>
                 <p class="task-text">
                     Proč je možné bez výrazné ztráty výpočetní přesnosti předpokládat, že se jádra v molekulách v porovnání s elektrony vůbec nehýbou?
@@ -146,7 +159,7 @@
             <p class="tag"><span class="fa-solid fa-tag"></span> kvantová fyzika</p>
         </div>
         <div class="task">
-            <h2 class="task-headline task-headline-bonus"><span class="fa-regular fa-star"></span> Bonusová úloha<small class="task-points">(? body)</small></h2>
+            <h2 class="task-headline task-headline-bonus"><span class="fa-regular fa-star"></span> Bonusová úloha<small class="task-points">(5 bodů)</small></h2>
             <div>
                 <p class="task-text">
                     Vypočítejte, jaký výkon bychom museli čerpat z přílivových elektráren, aby se Měsíc přestal oddalovat od Země. Počítejte, že se Měsíc od Země oddaluje rychlostí $4\,\mathrm{cm}$ za rok.
