[index, zadani.html] error hotfix

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     Které z následujících konstant nejsou ve skutečnosti konstantní v čase?
                 </p>
                 <p class="answer">
-                    a) Planckova Konstanta
+                    a) Planckova konstanta
                 </p>
                 <p class="answer">
                     b) Solární konstanta
